--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="logo">OTI'S FARM</p>
 
             <nav id="main-menu">
-                <ul>
+                <ul class="menu-burger">
                     <li> <a href="#">HOME</a> </li>
                     <li> <a href="#">about</a> </li>
                     <li> <a href="#">products</a> </li>
