--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <nav id="main-menu">
                 <ul class="menu-burger">
-                    <li> <a href="#">HOME</a> </li>
+                    <li class="liTag"> <a href="#">HOME</a> </li>
                     <li> <a href="#">about</a> </li>
                     <li> <a href="#">products</a> </li>
                     <li> <a href="#">price</a> </li>
